<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                style="@style/EditTextStyle"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLength="@integer/length_name"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSignUpEmail"
                style="@style/EditTextStyle"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/length_email"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSignUPassword"
                style="@style/EditTextStyle"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="@integer/length_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSignUpNumber"
                style="@style/EditTextStyle"
                android:hint="@string/hint_number"
                android:inputType="phone"
                android:maxLength="@integer/length_phone"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sv_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/action_signup" />


</RelativeLayout>